# polystrike-bot

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MARKETING_ANALYSIS.md  QUICKSTART.md  README.md  TODO.md  TROUBLESHOOTING.md  bot.py  check_positions.py  config.py  demo.py  polymarket_client.py  polystrike_client.py  pyproject.toml  pytest.ini  risk_manager.py  verify_setup.py
.github/workflows/: ci.yml
deploy/: README.md
deploy/ansible/: .gitignore  check_status.yml  inventory.ini.example  playbook.yml  stop_bot.yml
deploy/ansible/templates/: polystrike-bot.service.j2
tests/: conftest.py  test_bot.py  test_config.py  test_risk_manager.py
